#####################################
xxxx
-Show only courses that are active or have been active in the last 6 months in moodle dashboard
#####################################
#####################################
2023041400
-Links in review and revise notifications added.
-Fachlich and Formal reviewed questions counts added to dashboard.
-Exams can be created. Questions can be added. Statistics for the added questions of a quiz can be seen.
-Exams status can be changed manually. Finished exams will be marked as done automatically.
-Questions for me to revise, Questions for me to submit: Filters added, todos in dashboard added.
-Popups to request new questions or to change statuses reworked to have a multiselect, new roles to select, mandatory fields.
-Fragenerstellerlight and Fachlicherfragenreviewerlight added
-Questioncreation: added categorysettings to select
-Daily notification for open todos and for released questions created.
-Todos counter added to the moodle dashboard.
#####################################
#####################################
2023012000
-Fixed review-assignments and dashboard count numbers
-Added capability checks in dashboard
-Added button in quiz-creation form. This button returns the user to the exaquest exams page.
-Exams page created
-Exams page: add questions to exams functionality
#####################################
#####################################
2022110900
-Reworked multiple functionalities to work on a course_category level instead of courselevel.
#####################################
#####################################
2022110800
-Added a popup to see which questions have been requested as Fragenersteller
#####################################
#####################################
2022110700
-Added the possibility to add a comment to the create-question-request
-Added dashboard with links to all dashboards of all courses with exaquest block a user is enrolled in
#####################################
