@@ -77,8 +77,18 @@
                 </li>
                 <li>
                     <a class="link"
+                       href={{questions_new_link}}>{{questions_new_count}} {{#str}}
+                        questions_new_count, block_exaquest {{/str}}</a>
+                </li>
+                <li>
+                    <a class="link"
                        href={{questions_to_review_link}}>{{questions_to_review_count}} {{#str}}
                         questions_to_review_count, block_exaquest {{/str}}</a>
+                </li>
+                <li>
+                    <a class="link"
+                       href={{questions_to_revise_link}}>{{questions_to_revise_count}} {{#str}}
+                        questions_to_revise_count, block_exaquest {{/str}}</a>
                 </li>
                 <li>
                     <a class="link"
@@ -96,11 +106,13 @@
                         questions_reviewed_count, block_exaquest {{/str}}</a>
                 </li>
                 <li>
-                    <!--                There is no link for that, because there is no filter for that... but maybe in the future-->
-                    {{questions_released_count}} {{#str}}questions_released_count, block_exaquest {{/str}}
+                    <a class="link"
+                       href={{questions_released_link}}>{{questions_released_count}} {{#str}}
+                        questions_released_count, block_exaquest {{/str}}</a>
                 </li>
                 <li>
                     <!--                There is no link for that, because there is no filter for that... but maybe in the future-->
+<!--                    TODO: this is never used. Released questions are sent to be revised. Should we change that and use LOCKED status?-->
                     {{questions_released_and_to_review_count}} {{#str}}
                     questions_released_and_to_review_count, block_exaquest {{/str}}
                 </li>
